# libmpdclient

./: .gitignore  .travis.yml  AUTHORS  Changelog  INSTALL  Makefile  Makefile.am  NEWS  README  README.rst  TODO  autogen.sh  configure.ac  example.c  libmpdclient.c  libmpdclient.def  libmpdclient.h  libmpdclient.ld  meson.build  meson_options.txt  test.sh
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
doc/: doxygen.conf.in
include/mpd/: albumart.h  async.h  audio_format.h  binary.h  capabilities.h  client.h  command.h  compiler.h  connection.h  cpos.h  database.h  directory.h  entity.h  error.h  fingerprint.h  idle.h  list.h  meson.build  message.h  mixer.h  mount.h  output.h  pair.h  parser.h  partition.h  password.h  player.h  playlist.h  position.h  protocol.h  queue.h  recv.h  replay_gain.h  response.h  return_element.h  run.h  search.h  send.h  settings.h  socket.h  (+7 more)
man/: mpd_async_events.3  mpd_async_free.3  mpd_async_get_error.3  mpd_async_get_error_message.3  mpd_async_get_fd.3  mpd_async_get_system_error.3  mpd_async_io.3  mpd_async_new.3  mpd_async_recv_line.3  mpd_async_send_command.3  mpd_async_send_command_v.3  mpd_async_set_keepalive.3
src/: albumart.c  async.c  audio_format.c  binary.h  buffer.h  capabilities.c  cmessage.c  cmount.c  command.c  connection.c  connection.h  coutput.c  cpartition.c  cplaylist.c  cpos.c  cstats.c  cstatus.c  database.c  directory.c  entity.c  error.c  example.c  fd_util.c  fd_util.h  fingerprint.c  iaf.h  iasync.h  idle.c  ierror.c  ierror.h  internal.h  ioutput.h  isend.h  iso8601.c  iso8601.h  kvlist.c  kvlist.h  libmpdclient.c  libmpdclient.h  list.c  (+41 more)
test/: capture.c  capture.h  main.c  meson.build  t_commands.c  t_iso8601.c
vapi/: libmpdclient.vapi
